fix: add overflow

--- a/singolo2.css
+++ b/singolo2.css
@@ -113,6 +113,7 @@ button{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    overflow: hidden;
 }
 .portfolio-images{
     margin-bottom: 20px;
@@ -141,6 +142,8 @@ button{
     color: #666d89;
     margin-top: 16px;
     margin-bottom: 0px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .about-us-information{
     font-size: 12px;
